# tdf-iroh-s3

./: CLAUDE.md  Cargo.toml  README.md
attributes/: patreon.arkavo.com.json
docs/superpowers/plans/: 2026-03-25-tdf-iroh-s3.md  2026-05-26-iroh-docs-catalog-and-cwt.md  2026-05-26-reader-side-cwt-and-redb-event-log.md
docs/superpowers/specs/: 2026-03-25-tdf-iroh-s3-design.md  2026-03-25-test-plan-design.md  2026-05-26-iroh-docs-catalog-and-cwt.md
examples/: mint_test_idp.rs
packer/scripts/: install.sh  setup-user.sh
src/: attributes.rs  auth.rs  authz.rs  catalog.rs  catalog_api.rs  config.rs  ingest.rs  lib.rs  main.rs  node.rs  ssm.rs  tags_api.rs
src/auth/: cose_keys.rs  cwt.rs  mod.rs  test_signer.rs
src/catalog/: publish.rs  store.rs
src/pdp/: cache.rs  mod.rs
src/protocol/: catalog_read.rs
src/store/: s3.rs
src/test_cli/: fetch.rs  iroh_client.rs  mod.rs  push.rs  push_raw.rs
src/validation/: assertion.rs  attributes.rs  mod.rs
tests/: catalog_read_alpn_test.rs  catalog_store_test.rs  config_test.rs  e2e_test.rs  ingest_test.rs  node_ingest_test.rs  pdp_cache_test.rs  s3_client_test.rs  test_cli_create_tdf_test.rs  test_cli_iroh_client_test.rs  validation_assertion_test.rs  validation_attributes_test.rs  validation_pipeline_test.rs
