[package]
name = "tdf-iroh-s3"
version = "0.2.0"
edition = "2024"
rust-version = "1.91"

[dependencies]
# Iroh networking, blobs, and replicated docs
iroh = "0.97"
iroh-base = "0.97"
iroh-blobs = "0.99"
iroh-docs = "0.97"
irpc = "0.13"

# OpenTDF validation
opentdf = { git = "https://github.com/arkavo-org/opentdf-rs", tag = "0.12.0", default-features = false }

# AWS S3
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-sdk-ssm = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# CWT / COSE / JWKS
coset = "0.4"
ciborium = "0.2"
p256 = { version = "0.13", features = ["ecdsa"] }
arc-swap = "1"
base64 = "0.22"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }

# Hashing
blake3 = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
time = { version = "0.3", features = ["formatting"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Misc
bytes = "1"
hex = "0.4"
rand = "0.9"
futures-lite = "2.6.1"
iroh-gossip = "0.97"

# Embedded database
redb = "2"

[dev-dependencies]
tempfile = "3"
zip = "2.2"
tdf-iroh-s3 = { path = ".", features = ["test-fixtures"] }

[features]
default = []
# Exposes auth::test_signer for use from integration tests and dev tooling.
test-fixtures = []

[[bin]]
name = "tdf-iroh-s3-test"
path = "src/bin/test_cli.rs"
